# oiiaioiiiai

./: .gitignore  GEMINI.md
.specify/memory/: constitution.md
backend/: Dockerfile  README.md  config.json  pyproject.toml  requirements.txt
backend/src/: fastapi.py  main.py  scheduler.py
backend/src/api/: config.py  schedule.py
backend/src/models/: config.py
backend/src/services/: config_service.py  confluence_client.py  confluence_service.py  gcs_service.py  oncall_service.py  slack_service.py
backend/tests/contract/: test_config_api.py  test_schedule_api.py
backend/tests/unit/: test_confluence_service.py  test_gcs_service.py  test_oncall_service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ConfluenceForm.test.tsx  ConfluenceForm.tsx  Layout.css  Layout.tsx  OnCallForm.test.tsx  OnCallForm.tsx  OnCallRoster.test.tsx  OnCallRoster.tsx
frontend/src/pages/: AdminPage.tsx
frontend/src/services/: api.ts
specs/001-dev-team-schedulers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-dev-team-schedulers/checklists/: requirements.md
specs/001-dev-team-schedulers/contracts/: openapi.yml
